--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,14 +6,14 @@ repository: https://github.com/essarn/storyblok_client
 issue_tracker: https://github.com/essarn/storyblok_client/issues
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  http: ^0.12.0+4
-  enum_to_string: ^1.0.9
-  meta: ^1.1.8
-  intl: ^0.16.1
-  recase: ^3.0.0
+  http: ^0.13.1
+  enum_to_string: ^2.0.1
+  meta: ^1.3.0
+  intl: ^0.17.0
+  recase: ^3.0.1
 
 dev_dependencies:
-  effective_dart: ^1.2.1
+  effective_dart: ^1.3.1
