--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,14 +6,14 @@ repository: https://github.com/essarn/storyblok_client
 issue_tracker: https://github.com/essarn/storyblok_client/issues
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   http: ^0.13.1
   enum_to_string: ^2.0.1
   meta: ^1.3.0
   intl: ^0.17.0
-  recase: ^3.0.1
+  recase: ^4.0.0-nullsafety.0
 
 dev_dependencies:
   effective_dart: ^1.3.1
